risc0/zirgen/dsl/test/repro/subscript_bogus_array_type.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error:

component TestSubscript(arr: ArrayimeConstr<Val, 3>) {
  arr[1];
}

